@@ -3,7 +3,7 @@ package File::DataClass;
 use 5.010001;
 use strict;
 use warnings;
-use version; our $VERSION = qv( sprintf '0.73.%d', q$Rev: 6 $ =~ /\d+/gmx );
+use version; our $VERSION = qv( sprintf '0.73.%d', q$Rev: 7 $ =~ /\d+/gmx );
 
 1;
 
@@ -26,7 +26,7 @@ File::DataClass - Structured data file IO with caching and searching
 
 =head1 Version
 
-This document describes version v0.73.$Rev: 6 $ of L<File::DataClass>
+This document describes version v0.73.$Rev: 7 $ of L<File::DataClass>
 
 =head1 Synopsis
 
